# stock-fetcher-cli

./: .gitignore  Cargo.toml  Makefile  README.md  email_config.json.dev  openssl_build
src/: email.rs  lib.rs  main.rs  stock_api.rs
