[package]
name = "stock-fetcher"
version = "0.1.0"
authors = ["Mohammed Al-Ani <mohammedalanny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.42"
clap = "2.33.3"
#email dependencies
lettre = "0.9"
lettre_email = "0.9"