[package]
name = "stock-fetcher"
version = "0.1.0"
authors = ["Mohammed Al-Ani <mohammedalanny@gmail.com>"]
edition = "2018"
repository = "https://github.com/MoeAl-Ani/stock-fetcher-cli"
keywords = ["cli", "stock", "cryptocurrency", "arm"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.42"
clap = "2.33.3"
#email dependencies
lettre = "0.9"
lettre_email = "0.9"

openssl = { version = "0.10", features = ["vendored"] }
#openssl-sys = "0.9.60"

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = "0.10.32"